--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
 	"editor.detectIndentation": false,
-	"javascript.format.enable": false
+	"editor.insertSpaces": false,
+	"editor.tabSize": 2,
+	"javascript.format.enable": false,
+	"typescript.format.enable": false,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.formatOnSave": true,
+	"[typescriptreact]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
