--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev --turbopack",
 		"build": "next build --turbopack",
 		"start": "next start",
-		"lint": "eslint --fix"
+		"lint": "eslint --fix .",
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"next": "15.5.4",
