--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
+		"@prisma/client": "^6.17.1",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.7",
@@ -22,6 +23,7 @@
 		"next": "15.5.4",
 		"next-themes": "^0.4.6",
 		"openai": "^6.3.0",
+		"pg": "^8.16.3",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-hook-form": "^7.65.0",
@@ -33,6 +35,7 @@
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
+		"@types/pg": "^8.15.5",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
@@ -40,7 +43,9 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.4",
 		"prettier": "^3.6.2",
+		"prisma": "^6.17.1",
 		"tailwindcss": "^4",
+		"tsx": "^4.20.6",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5"
 	}
